feat: implementa estrutura do banco de dados postgresql

--- a/UsersVehicles-Api/appsettings.Development.json
+++ b/UsersVehicles-Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings":{
+    "PostgreSQLConnection":"Host=localhost;Database=vehicles_db;Username=adminveh;Password=adminveh1"
   }
 }
