--- a/UsersVehicles-Api/appsettings.json
+++ b/UsersVehicles-Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt":{
+    "SecretKey":"minimal-api-sk-veiculos-2345678901"
+  }
 }
