feat: conteineriza a aplicação para ambiente de desenvolvimento junto com banco de dados e orquestra com docker compose

--- a/UsersVehicles-Api/appsettings.Development.json
+++ b/UsersVehicles-Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings":{
-    "PostgreSQLConnection":"Host=localhost;Database=vehicles_db;Username=adminveh;Password=adminveh1"
+    "PostgreSQLConnection":"Host=postgres-ve;Database=vehicles_db;Username=adminveh;Password=adminveh1"
   }
 }
